--- a/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
+++ b/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
@@ -63,8 +63,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database.cs" />
+    <Compile Include="DatabaseStore.cs" />
     <Compile Include="DatabaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveResourceManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
