--- a/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
+++ b/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncPump.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="DatabaseStore.cs" />
     <Compile Include="DatabaseTests.cs" />
