--- a/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
+++ b/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
@@ -62,12 +62,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsynchronousBlockingResourceManager.cs" />
     <Compile Include="AsyncPump.cs" />
+    <Compile Include="BaseResourceManager.cs" />
+    <Compile Include="DangerousResourceManager.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="DatabaseStore.cs" />
     <Compile Include="DatabaseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveResourceManager.cs" />
+    <Compile Include="SynchronousSaveResourceManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
