--- a/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
+++ b/AsyncTransactions/AsyncTransactions/AsyncTransactions.csproj
@@ -69,10 +69,16 @@
     <Compile Include="Database.cs" />
     <Compile Include="DatabaseStore.cs" />
     <Compile Include="DatabaseTests.cs" />
+    <Compile Include="Infrastructure\DanielMarbach.cs" />
+    <Compile Include="Infrastructure\GiveAway.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Script.cs" />
     <Compile Include="SynchronousSaveResourceManager.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Giveaway.pptx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
