Added the database mode in order to dynamically switch between different things I want to show

--- a/AsyncTransactions/AsyncTransactions.csproj
+++ b/AsyncTransactions/AsyncTransactions.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Customer.cs" />
     <Compile Include="DangerousResourceManager.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="DatabaseMode.cs" />
     <Compile Include="DatabaseStore.cs" />
     <Compile Include="Infrastructure\DanielMarbach.cs" />
     <Compile Include="Infrastructure\GiveAway.cs" />
